@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-07T16:19:16Z",
-  "count_outdated" : 377,
-  "uniques_outdated" : 204,
-  "count" : 405,
+  "timestamp" : "2022-07-08T01:07:28Z",
+  "count_outdated" : 379,
+  "uniques_outdated" : 205,
+  "count" : 406,
   "uniques" : 220,
   "clones" : [
-    {
-      "timestamp": "2022-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-24T00:00:00Z",
       "count": 1,
